# trumpf_file_analyzer

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh
src/: CMakeLists.txt  file_analyzer.c  file_analyzer.h  main.c  static_double_deque.c  static_double_deque.h
test/: CMakeLists.txt  main_test.c  test.sh
test/data/extended/: expected_output.csv  input.csv
test/data/simple/: expected_output.csv
test/data/simple_crlf/: expected_output.csv  input.csv
test/data/simple_lf/: input.csv
